kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-kubernetes-demo
  namespace: laravel-namespace
spec:
  type: NodePort
  selector:
    run: laravel-kubernetes-demo
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31000
